@@ -21,6 +21,8 @@ __revision__ = '$Id: unittest_checkers_utils.py,v 1.6 2005-11-02 09:22:07 syt Ex
 import unittest
 import sys
 
+from astroid import test_utils
+
 from pylint.checkers import utils
 try:
     __builtins__.mybuiltin = 2
@@ -43,6 +45,27 @@ class UtilsTC(unittest.TestCase):
         self.assertEqual(utils.is_builtin('__file__'), False)
         self.assertEqual(utils.is_builtin('whatever'), False)
         self.assertEqual(utils.is_builtin('mybuiltin'), False)
+
+    def testGetArgumentFromCall(self):
+        node = test_utils.extract_node('foo(bar=3)')
+        self.assertIsNotNone(utils.get_argument_from_call(node, keyword='bar'))
+        with self.assertRaises(utils.NoSuchArgumentError):
+            node = test_utils.extract_node('foo(3)')
+            utils.get_argument_from_call(node, keyword='bar')
+        with self.assertRaises(utils.NoSuchArgumentError):
+            node = test_utils.extract_node('foo(one=a, two=b, three=c)')
+            utils.get_argument_from_call(node, position=1)
+        node = test_utils.extract_node('foo(a, b, c)')
+        self.assertIsNotNone(utils.get_argument_from_call(node, position=1))
+        node = test_utils.extract_node('foo(a, not_this_one=1, this_one=2)')
+        arg = utils.get_argument_from_call(node, position=1, keyword='this_one')
+        self.assertEqual(2, arg.value)
+        node = test_utils.extract_node('foo(a)')
+        with self.assertRaises(utils.NoSuchArgumentError):
+            utils.get_argument_from_call(node, position=1)
+        with self.assertRaises(ValueError):
+            utils.get_argument_from_call(node, None, None)
+
 
 if __name__ == '__main__':
     unittest.main()
